# GAIA-Plus

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  run.sh  run_green.sh  run_white.sh
data/: gaia_plus.jsonl
src/: launcher.py
src/green_agent/: agent.py  gaia_green_agent.toml  tau_green_agent.toml
src/white_agent/: agent.py
